testdata/baselines/reference/submodule/conformance/override_js2.errors.txt
a.js(7,5): error TS4119: This member must have a JSDoc comment with an '@override' tag because it overrides a member in the base class 'B'.
a.js(9,5): error TS4119: This member must have a JSDoc comment with an '@override' tag because it overrides a member in the base class 'B'.


==== a.js (2 errors) ====
    class B {
        foo (v) {}
        fooo (v) {}
    }
    
    class D extends B {
        foo (v) {}
        ~~~
!!! error TS4119: This member must have a JSDoc comment with an '@override' tag because it overrides a member in the base class 'B'.
        /** @override */
        fooo (v) {}
        ~~~~
!!! error TS4119: This member must have a JSDoc comment with an '@override' tag because it overrides a member in the base class 'B'.
        /** @override */
        bar(v) {}
    }
    
    class C {
        foo () {}
        /** @override */
        fooo (v) {}
        /** @override */
        bar(v) {}
    }